# Box

./: .gitignore  CHANGELOG.md  NEXT_STEPS.md  QUICK_START.md  README.md  RELEASE_STATUS_v0.8.0.md  SESSION_SUMMARY.md  check_spawn_sig  justfile  move_test  quick-install-openclaw.sh
.github/workflows/: ci.yml  publish-winget.yml  release.yml
.winget/: A3SLab.Box.installer.yaml
bench/: README.md  bench.sh
containerd-shim/: Cargo.toml
containerd-shim/src/: logic.rs  main.rs  service.rs
deploy/helm/a3s-box/: Chart.yaml  values.yaml
deploy/scripts/: install-runtimeclass.sh  runtimeclass-soak.sh  soak-evidence-self-test.sh  verify-soak-evidence.sh
deploy/shim/: containerd-a3s-box.toml  runtimeclass-smoke.yaml  runtimeclass.yaml  soak-complex.yaml  test-pod.yaml
docs/: ANNOUNCEMENT-v2.1.0.md  ANNOUNCEMENT-v2.2.0.md  DOCKER_CRI_PARITY_PLAN.md  WINGET_QUICKSTART.md  ci-kvm-runner.md  cow-snapshot-fork-design.md  cri-conformance.md  host-integration.md  monitor-service.md  native-snapshot-fork-feasibility.md  p2-deferred-main-spawn-design.md  production-cluster-tests.md  productization-plan.md
images/pause/: Dockerfile  README.md
integrations/skills/: README.md  install.sh
integrations/skills/a3s-box/: SKILL.md
scripts/: crictl-test-suite.sh  host-integration-smoke.sh  install-crictl.sh
sdk/node/: Cargo.toml  package.json
sdk/python/: Cargo.toml  README.md  pyproject.toml
sdk/python/a3s_box/: __init__.py  options.py  sandbox.py  sdk.py  stream.py  transport.py
sdk/python/tests/: test_sdk.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts  options.ts  sandbox.ts  sdk.ts  stream.ts  transport.ts
sdk/typescript/tests/: sdk.test.ts
src/: Cargo.toml  QUICK_START.md  tarpaulin.toml
src/api/src/handlers/: containers.rs  networks.rs  volumes.rs
src/ci/: Cargo.toml  README.md
src/ci/examples/: pipeline.rs
src/ci/src/: lib.rs
src/cli/: Cargo.toml
src/cli/src/: audit.rs  boot.rs  cleanup.rs  health.rs  image_usage.rs  lib.rs  lifecycle.rs  monitor.rs  output.rs  platform.rs  process.rs  resolve.rs  socket_paths.rs  terminal.rs  test_helpers.rs
src/cli/src/commands/: attach.rs  attest.rs  audit.rs  build.rs  commit.rs  common.rs  compose.rs  container.rs  container_prune.rs  container_update.rs  cp.rs  create.rs  diff.rs  events.rs  exec.rs  export.rs  images.rs  info.rs  inject_secret.rs  inspect.rs  kill.rs  load.rs  login.rs  logout.rs  logs.rs  mod.rs  monitor.rs  monitor_metrics.rs  monitor_service.rs  network.rs  pause.rs  pool.rs  port.rs  prune.rs  ps.rs  pull.rs  push.rs  rename.rs  restart.rs  rm.rs  (+14 more)
src/cli/src/state/: file.rs  lock.rs  mod.rs  policy.rs  tests.rs
src/cli/src/windows/: cache.rs  elevate.rs  install.rs  main.rs  mod.rs  wsl.rs
src/cli/tests/: command_coverage.rs  core_smoke.rs  host_smoke.rs  nginx_integration.rs  tee_integration.rs
src/cli/tests/support/: mod.rs
src/core/: Cargo.toml
src/core/src/: audit.rs  compose.rs  config.rs  error.rs  exec.rs  fs_atomic.rs  lib.rs  log.rs  network.rs  operator.rs  platform.rs  port.rs  scale.rs  security.rs  snapshot.rs  tee.rs  vmm.rs  volume.rs  workload.rs
src/core/src/traits/: audit.rs  cache.rs  credential.rs  event.rs  metrics.rs  mod.rs  registry.rs  store.rs
src/cri/src/: config_mapper.rs  container.rs  image_service.rs  lib.rs  main.rs  persistent_store.rs  runtime_service.rs  sandbox.rs  server.rs  spdy.rs  state.rs  streaming.rs
src/cri/src/runtime_service/: convert.rs  log_writer.rs  mod.rs  mounts.rs  network.rs  service_ops.rs  stats.rs  supervisor.rs  tests.rs
src/guest/init/: Cargo.toml
src/guest/init/src/: cgroup.rs  exec_server.rs  lib.rs  main.rs  namespace.rs  network.rs  port_forward.rs  pty_server.rs  reaper.rs  user.rs
src/guest/init/src/attest_server/: frame.rs  handlers.rs  mod.rs  snp.rs  tests.rs
src/lambda/: Cargo.toml
src/lambda/src/: error.rs  lib.rs  vm.rs
src/netproxy/: Cargo.toml
src/netproxy/src/: lib.rs
src/runtime/: Cargo.toml
src/runtime/src/: audit.rs  compose.rs  file_lock.rs  fs.rs  grpc.rs  lib.rs  log.rs  operator.rs  prom.rs  resize.rs  scale.rs  snapshot.rs  store_io.rs  vm.rs
src/runtime/src/backends/: kvm.rs
src/runtime/src/cache/: layer_cache.rs  rootfs_cache.rs
src/runtime/src/grpc/: attestation.rs  exec.rs  pty.rs
src/runtime/src/krun/: context.rs  mod.rs
src/runtime/src/network/: mod.rs  netproxy.rs  passt.rs  store.rs
src/runtime/src/oci/: credentials.rs  image.rs  layers.rs  limited_reader.rs  mod.rs  pull.rs  registry.rs  rootfs.rs  signing.rs  store.rs
src/runtime/src/oci/signing/: mod.rs
src/runtime/src/pool/: scaler.rs  warm_pool.rs
src/runtime/src/rootfs/: builder.rs  layout.rs  mod.rs  overlay.rs  provider.rs
src/runtime/src/scale/: manager.rs  mod.rs  registry.rs  tests.rs
src/runtime/src/tee/: ark_roots.rs  certs.rs  extension.rs  kbs.rs  mod.rs  policy.rs  ratls.rs  rollback.rs  sealed.rs  simulate.rs  snp.rs  verifier.rs
src/runtime/src/vm/: layout.rs  mod.rs  network.rs  ready.rs  reap.rs  spec.rs
src/runtime/src/vmm/: controller.rs  handler.rs  provider.rs  spec.rs
src/runtime/src/volume/: store.rs
src/sdk/: Cargo.toml  README.md  build.rs
src/sdk/examples/: pipeline.rs
src/sdk/src/: adapter.rs  error.rs  lib.rs  options.rs  pipeline.rs  registry.rs  sandbox.rs  sdk.rs  shim_embed.rs  vm.rs
src/sdk/tests/: integration_kvm.rs  soak_kvm.rs
src/shim/: Cargo.toml  build.rs
src/shim/src/: main.rs  windows_port_forward.rs
src/win-launcher/: Cargo.toml
src/win-launcher/src/: cache.rs  elevate.rs  main.rs  proxy.rs
