[package]
name = "a3s-box-node"
version = "0.5.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
a3s-box-sdk = { path = "../../src/sdk" }
a3s-box-core = { path = "../../src/core" }
a3s-box-runtime = { path = "../../src/runtime" }
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
