[package]
name = "a3s-box-python"
version = "0.5.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
name = "_a3s_box"
crate-type = ["cdylib"]

[dependencies]
a3s-box-sdk = { path = "../../src/sdk" }
a3s-box-core = { path = "../../src/core" }
a3s-box-runtime = { path = "../../src/runtime" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[profile.release]
lto = true
strip = "symbols"
