[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a3s-box"
version = "0.2.0"
description = "Python SDK for A3S Box — embedded MicroVM sandboxes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "A3S Lab"}]
keywords = ["sandbox", "microvm", "container", "tee", "confidential-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/A3S-Lab/Box"
Repository = "https://github.com/A3S-Lab/Box"

[tool.setuptools.packages.find]
include = ["a3s_box*"]
