[package]
name = "a3s-box-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for a3s-box. Includes a programmable CI/CD pipeline API (pipelines as code, one MicroVM kernel per step)."

[dependencies]
# none — a thin, dependency-free wrapper over the `a3s-box` CLI.
