[package]
name = "a3s-box-shim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MicroVM shim process for A3S Box"

[[bin]]
name = "a3s-box-shim"
path = "src/main.rs"

[dependencies]
a3s-box-core = { path = "../core" }
libkrun-sys = { version = "0.1.5", path = "../deps/libkrun-sys", package = "a3s-libkrun-sys" }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
a3s-box-netproxy = { path = "../netproxy" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
