[workspace]

[package]
name = "a3s-box-win"
version = "0.7.0"
edition = "2021"
authors = ["A3S Lab Team"]
license = "MIT"

[[bin]]
name = "a3s-box-win"
path = "src/main.rs"

[dependencies]
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_Shell", "Win32_Foundation"] }
